--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    android:id="@+id/relativelayout"
     tools:context=".MainActivity">
 
     <RelativeLayout
@@ -20,9 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:padding="5dp"
-            android:text="hello"
-            android:textSize="30dp"
-            android:layout_alignParentLeft="true" />
+            android:text="hello" />
 
         <CheckBox
             android:id="@+id/idAttach"
@@ -54,7 +51,7 @@
             android:gravity="center"
             android:hint="Event name"
             android:padding="10dp"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:textColorHint="@color/colorGray" />
 
         <TextView
@@ -66,7 +63,7 @@
             android:gravity="center"
             android:hint="2019-01-01"
             android:padding="10dp"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:textColorHint="@color/colorGray" />
 
         <TextView
@@ -78,7 +75,7 @@
             android:gravity="center"
             android:hint="16:35"
             android:padding="10dp"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:textColorHint="@color/colorGray" />
 
         <EditText
@@ -91,7 +88,7 @@
             android:hint="Less than 20 char or 3 words"
             android:maxLength="20"
             android:padding="10dp"
-            android:textColor="#000000"
+            android:textColor="#ffffff"
             android:textColorHint="@color/colorGray" />
 
         <Spinner
@@ -131,9 +128,7 @@
                 android:paddingEnd="10dp"
                 android:text="View Picture"
                 android:textColor="#000000"
-                android:textSize="17sp"
-                android:layout_alignParentLeft="true"
-                android:layout_marginRight="5dp" />
+                android:textSize="17sp" />
 
             <TextView
                 android:id="@+id/idChangeImage"
@@ -149,9 +144,7 @@
                 android:paddingEnd="10dp"
                 android:text="Change Picture"
                 android:textColor="#000000"
-                android:textSize="17sp"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="5dp" />
+                android:textSize="17sp" />
         </RelativeLayout>
 
     </LinearLayout>
@@ -175,8 +168,7 @@
             android:paddingBottom="10dp"
             android:text="Save Changes"
             android:textColor="#000000"
-            android:textSize="17sp"
-            android:layout_alignParentLeft="true" />
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/delete_button"
@@ -191,7 +183,6 @@
             android:paddingBottom="10dp"
             android:text="Delete"
             android:textColor="#000000"
-            android:textSize="17sp"
-            android:layout_alignParentRight="true" />
+            android:textSize="17sp" />
     </RelativeLayout>
 </RelativeLayout>
