--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -19,10 +19,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:padding="5dp"
-            android:text="hello" 
-            android:textSize="30dp"	
-            android:layout_alignParentLeft="true" />
+            android:text="hello"
+            android:textColor="#000000"
+            android:textSize="30dp" />
 
         <CheckBox
             android:id="@+id/idAttach"
@@ -131,8 +132,8 @@
                 android:paddingEnd="10dp"
                 android:text="View Picture"
                 android:textColor="#000000"
-                android:textSize="17sp" 
-                android:layout_alignParentLeft="true"	
+                android:textSize="17sp"
+                android:layout_alignParentLeft="true"
                 android:layout_marginRight="5dp" />
 
             <TextView
@@ -149,8 +150,8 @@
                 android:paddingEnd="10dp"
                 android:text="Change Picture"
                 android:textColor="#000000"
-                android:textSize="17sp" 
-                android:layout_alignParentRight="true"	
+                android:textSize="17sp"
+                android:layout_alignParentRight="true"
                 android:layout_marginLeft="5dp" />
         </RelativeLayout>
 
@@ -175,7 +176,7 @@
             android:paddingBottom="10dp"
             android:text="Save Changes"
             android:textColor="#000000"
-            android:textSize="17sp" 
+            android:textSize="17sp"
             android:layout_alignParentLeft="true" />
 
         <TextView
@@ -191,7 +192,7 @@
             android:paddingBottom="10dp"
             android:text="Delete"
             android:textColor="#000000"
-            android:textSize="17sp" 
+            android:textSize="17sp"
             android:layout_alignParentRight="true" />
     </RelativeLayout>
 </RelativeLayout>
