--- a/app/src/main/res/layout/activity_accept_friend.xml
+++ b/app/src/main/res/layout/activity_accept_friend.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context=".AcceptFriendActivity">
 
     <RelativeLayout
@@ -48,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/friend_name"
-                android:text=" asks to follow you"
+                android:text=" ask to follow you"
 
                 android:textSize="20dp"></TextView>
 
