part 4 mostly completed

--- a/app/src/main/res/layout/activity_mood.xml
+++ b/app/src/main/res/layout/activity_mood.xml
@@ -53,7 +53,7 @@
             android:textSize="17sp" />
 
         <TextView
-            android:id="@+id/idMyFriendsMood"
+            android:id="@+id/view_friends_mood_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
