--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MoodHistoryActivity">
+    tools:context=".LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,20 +26,20 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/idUsername"
+            android:id="@+id/email_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@drawable/text_border"
             android:gravity="center"
-            android:hint="Username"
+            android:hint="Email"
             android:inputType="text"
             android:padding="10dp"
             android:textColor="#ffffff"
             android:textColorHint="@color/colorGray" />
 
         <EditText
-            android:id="@+id/idPassword"
+            android:id="@+id/password_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -59,10 +59,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/idLogin"
+                android:id="@+id/sign_in_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:background="@drawable/buttonstyle"
                 android:padding="20dp"
                 android:text="SIGN IN"
@@ -70,16 +69,16 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/idCancel"
+                android:id="@+id/sign_up_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 android:background="@drawable/buttonstyle"
                 android:padding="20dp"
                 android:text="SIGN UP"
                 android:textSize="15sp"
                 android:textStyle="bold" />
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
