--- a/app/src/main/res/layout/activity_mood_history.xml
+++ b/app/src/main/res/layout/activity_mood_history.xml
@@ -15,9 +15,11 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/search_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="@drawable/buttonstyle"
             android:hint="All"
             android:padding="10dp"
@@ -26,7 +28,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view1"
+        android:id="@+id/friends_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/id2"
@@ -44,7 +46,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/idAdd"
+            android:id="@+id/create_mood_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="5dp"
@@ -52,9 +54,11 @@
             android:padding="20dp"
             android:text="Add New Event"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginRight="5dp" />
 
         <TextView
+            android:id="@+id/view_on_map_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -62,6 +66,7 @@
             android:padding="20dp"
             android:text="View on Map"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 </RelativeLayout>
