--- a/app/src/main/res/layout/item_mood_history.xml
+++ b/app/src/main/res/layout/item_mood_history.xml
@@ -12,17 +12,22 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/idName"
+            android:id="@+id/name_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/ivImage" />
+            android:layout_toStartOf="@+id/ivImage"
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/idImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:text=">:(" />
+            android:layout_marginEnd="0dp"
+            android:text=">:("
+            android:textColor="#000000"
+            android:textSize="36sp" />
     </RelativeLayout>
 
     <TextView
