--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".AddActivity">
 
     <CheckBox
         android:id="@+id/idAttach"
@@ -15,7 +15,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/buttonstyle"
         android:padding="5dp"
-        android:text="Attach location" />
+        android:text="Attach location"
+        android:checked="false" />
+
 
     <LinearLayout
         android:id="@+id/idMiddle"
@@ -92,7 +94,7 @@
             android:padding="10dp"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
-            android:text="Optionial Info"
+            android:text="Option"
             android:textColor="#000000"
             android:textSize="17sp" />
 
@@ -113,5 +115,6 @@
         android:text="Confirm Adding"
         android:textColor="#000000"
         android:textSize="17sp" />
+
 
 </RelativeLayout>
