--- a/app/src/main/res/layout/activity_friend_list.xml
+++ b/app/src/main/res/layout/activity_friend_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".FriendListActivity">
 
     <RelativeLayout
         android:id="@+id/id1"
@@ -46,7 +46,7 @@
         android:gravity="center"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:text="Follow Requests"
+        android:text="Folloing requests"
         android:textSize="18sp" />
 
     <TextView
@@ -93,15 +93,6 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/view_on_map_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/buttonstyle"
-            android:padding="20dp"
-            android:text="View on Map"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+
     </LinearLayout>
 </RelativeLayout>
